test/files/neg/reportage.check
reportage.scala:27: error: method x in object X is deprecated (since Policy 1.0): Badly done (since Policy 1.0)
    def f = policy.test.X.x
                          ^
reportage.scala:28: method y in object Y is deprecated (since Policy 1.0): Also pretty bad but salvageable (since Policy 1.0)
    def g = policy.reprieve.Y.y
                              ^
one error found
